# NPFL_model_optimizer

./: .gitignore  README.md  config_example.yml  pyproject.toml  requirements.txt
NPFL_model_optimizer/: __init__.py  _model_optimizer.py
NPFL_model_optimizer/data/: __init__.py  _image_datasets.py
NPFL_model_optimizer/utils/: ecs_logger.py
