[build-system]
requires = ["setuptools>=68", "wheel"]

build-backend = "setuptools.build_meta"
[tool.setuptools.packages]
find = {}

[project]
name = "NPFL_model_optimizer"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.10"
keywords = []
dynamic = ["dependencies"]
authors = [
    { "name"="Jakub Sukdol", "email"="kubasukdol@gmail.com" } ,
]

classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools]
include-package-data = true


